appId: com.example.flutter_app
tags: ["P1", "patient", "calendar"]
---
# Test: View Calendar and Tasks
# Priority: Medium
# Description: Patient views calendar and sees tasks scheduled for specific dates.

# get to dahsboard
- runFlow:
    when:
      notVisible: "Home"
    file: "../../helpers/common_flows/sign_in_patient.yaml"

- tapOn: "Tasks.*"
- assertVisible: "Calendar"
- assertVisible: ".*Medication.*"
- tapOn: ".*Medication.*"
- assertVisible: "Task Details.*"
- assertVisible: "Mark task as Complete.*"
- back

# Test empty task day
- tapOn: ".*10.*"
- assertVisible: ".*No tasks scheduled for this day.*"
- back
